--- a/src/locales/en/HomePage.json
+++ b/src/locales/en/HomePage.json
@@ -1,6 +1,6 @@
 {
   "title": "Johand.dev | Home",
-  "description": "Welcome! This is the main page of Johand.dev",
+  "description": "This is the main page of Johand.dev",
   "currentLocale": "Current locale: {{locale}}",
   "defaultLocale": "Default locale: {{locale}}",
   "configuredLocales": "Configured locales: {{locales}}",
