--- a/src/locales/en/HomePage.json
+++ b/src/locales/en/HomePage.json
@@ -1,8 +1,4 @@
 {
   "title": "Johand.dev | Home",
-  "description": "This is the main page of Johand.dev",
-  "currentLocale": "Current locale: {{locale}}",
-  "defaultLocale": "Default locale: {{locale}}",
-  "configuredLocales": "Configured locales: {{locales}}",
-  "content": "Hi, I am the main page content D:"
+  "content": "Yes... This is it. A website."
 }
