--- a/src/locales/nb-NO/FourOhFourPage.json
+++ b/src/locales/nb-NO/FourOhFourPage.json
@@ -1,7 +1,4 @@
 {
   "pageTitle": " Johand.dev | Siden finnes ikke",
-  "shortDescription": "404 - Ikke funnet",
-  "title": "Siden finnes ikke",
-  "description": "Beklager, jeg kan ikke finne siden du er ute etter. Kanskje nettadressen er stavet feil, eller så kan siden ha blitt slettet eller flyttet.",
-  "backButton": "Gå tilbake til forsiden"
+  "shortDescription": "404 - Ikke funnet"
 }
