--- a/src/locales/nb-NO/HomePage.json
+++ b/src/locales/nb-NO/HomePage.json
@@ -1,8 +1,4 @@
 {
   "title": "Johand.dev | Hjem",
-  "description": "Dette er hjemmesiden til Johand.dev",
-  "currentLocale": "Naaverende spraak: {{locale}}",
-  "defaultLocale": "Standard spraaket: {{locale}}",
-  "configuredLocales": "Coonfigurerte spraak: {{locales}}",
-  "content": "Hei, jeg er hovedinnholdet til siden D:"
+  "content": "Ja, dette er alt. En nettside."
 }
