--- a/src/locales/nb-NO/FiveHundredPage.json
+++ b/src/locales/nb-NO/FiveHundredPage.json
@@ -1,7 +1,4 @@
 {
   "pageTitle": " Johand.dev | Intern Feil",
-  "shortDescription": "500 - Intern Feil",
-  "title": "Intern Serverfeil... Det er ikke bra.",
-  "description": "Det er meg, ikke deg! Serveren oppdaget en intern feil og var ikke i stand til å fullføre forespørselen din.",
-  "backButton": "Gå tilbake til forsiden"
+  "shortDescription": "500 - Intern Feil"
 }
